Bug 150710 - Wrong Kashida in Arabic text when enabling "Toggle formatting marks"
Summary: Wrong Kashida in Arabic text when enabling "Toggle formatting marks"
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: خالد حسني
URL:
Whiteboard: target:7.5.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: RTL-CTL Kashida-Justification
  Show dependency treegraph
 
Reported: 2022-08-31 00:23 UTC by Hossein
Modified: 2022-09-01 09:52 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
First: all the text is black (40.52 KB, image/png)
2022-08-31 20:49 UTC, Hossein
Details
Second: part of the kashida becomes blue (40.75 KB, image/png)
2022-08-31 20:50 UTC, Hossein
Details
Third: all of the kashida becomes blue (40.21 KB, image/png)
2022-08-31 20:51 UTC, Hossein
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hossein 2022-08-31 00:23:35 UTC
Description:
When enabling the display of special characters, with "Toggle formatting marks (CTRL+F10)", kashida placement becomes wrong.

Steps to Reproduce:
1. Open attachment 169697 [details] from bug 139627
2. Choose "Toggle formatting marks" from toolbar or press "CTRL+F10"

Actual Results:
Bad placement of kashida, drawn in different color (blue)

Expected Results:
Correct placement of kashida, as it is without showing special characters.

Note: In previous versions of LibreOffice, this bug was happening. This was because with or without this option ("Toggle formatting marks"), the position of the kashida was similar (and incorrect).


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: aea89831f93b501738e62db9787a1085fd483193
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 خالد حسني 2022-08-31 05:29:47 UTC
Interesting, I have seen this blue coloring before and thought it is a new feature in master or something :)
Comment 2 Hossein 2022-08-31 10:42:18 UTC
Let me correct the above note:

In previous versions of LibreOffice, this bug was NOT happening. ...
Comment 3 Hossein 2022-08-31 20:48:22 UTC
Bibisected using "linux-64-7.5".

At first, all of the text was black.

Then, with this commit, part of the kashida became blue:

commit 3901e029bd39575f700e69a73818565d62226a23
Author: Khaled Hosny <khaled@aliftype.com>
Date:   Mon Aug 8 22:08:37 2022 +0200

    tdf#104921: Cleanup Kashida insertion logic

After that, with this commit, all of the kashida became blue:

commit 72e56537d4bb9411229346da977d1d669ccfca9a
Author: Khaled Hosny <khaled@aliftype.com>
Date:   Thu Aug 11 18:52:17 2022 +0200

    tdf#139627: Don’t set Kashida insertion position after combining marks
Comment 4 Hossein 2022-08-31 20:49:54 UTC
Created attachment 182127 [details]
First: all the text is black
Comment 5 Hossein 2022-08-31 20:50:47 UTC
Created attachment 182128 [details]
Second: part of the kashida becomes blue
Comment 6 Hossein 2022-08-31 20:51:13 UTC
Created attachment 182129 [details]
Third: all of the kashida becomes blue
Comment 7 Commit Notification 2022-08-31 21:42:56 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/912f238343b99d89766c9ddde3f211454a59ae0c

tdf#150710: Don’t draw kashida when drawing bullet

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Hossein 2022-09-01 09:52:38 UTC
Thanks Khaled,

I see it fixed with:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 6917a939cc656aaafb643627685b155d60f0399f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded