tdf#150710: Don’t draw kashida when drawing bullet

Passing the KashidaArray to the DrawText() calls for bullet drawing has
the undesired effect of drawing the Kashida’s in bullet color and
without overlap so they look wider than the regularly drawn ones. This
is a regression from:

commit 3901e029bd39575f700e69a73818565d62226a23
Author: Khaled Hosny <khaled@aliftype.com>
Date:   Mon Aug 8 22:08:37 2022 +0200

    tdf#104921: Cleanup Kashida insertion logic

Change-Id: I0c521249a9ffdd6b0cc273f0742bdeec53975a42
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139133
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>